# InheritBench

./: .env.example  .gitignore  CITATION.cff  INHERITBENCH_HACKATHON_IDEA_AND_PROJECT_PLAN.md  NOTICE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json
.github/workflows/: phase5.yml
apps/web/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
artifacts/day1/: doctor-fallback.json  doctor.json
artifacts/modal/: modal-smoke-20260714T192115-de421316.json
configs/analysis/: phase4_memo.yaml
configs/distillation/: opsroute_synthetic_v0.1.yaml
configs/evaluation/: phase3b_confirmatory.yaml  phase4_adversarial.yaml
configs/experiments/: day2.yaml  day3.yaml  day3_matched.yaml  phase3b.yaml  phase4.yaml
configs/integrity/: frozen_evidence_roots_v0.2.json
configs/methods/: source_adapted_full.yaml  source_base_supporting.yaml  target_full_retrain.yaml  target_hybrid_anchored_distillation_10.yaml  target_limited_retrain_10pct.yaml  target_synthetic_distillation.yaml  target_synthetic_distillation_matched.yaml  target_untouched.yaml
configs/models/: fake_source.yaml  fake_target.yaml  source.yaml  target.yaml  target_fallback.yaml
configs/synthetic/: day3_matched_pool.yaml
configs/tasks/: opsroute.yaml  (+1 more)
docs/: BUILD_LOG.md  CAPABILITY_PACKS.md  CLEAN_ROOM.md  COMPUTE_PLAN.md  DECISIONS.md  DEMO_SCRIPT.md  DEPLOYMENT_CHECKLIST.md  DEVPOST_SUBMISSION_DRAFT.md  EVALUATION_PROTOCOL.md  JUDGE_REPLAY.md  LICENSING.md  METHOD_ANCHORED_TRANSFER.md  METHOD_SYNTHETIC_DISTILLATION.md  PACK_DRIVEN_SUCCESSION.md  PRODUCT_ARCHITECTURE.md  PROTOCOL_AMENDMENT_BOUNDED_MULTISTART_RECOVERY.md  PROTOCOL_AMENDMENT_SEEDED_REFERENCE_SUCCESSION.md  PROTOCOL_IMPLEMENTATION_CORRECTION_SEEDED_REFERENCE.md  SUCCESSION_OUTPUTS.md
tests/: conftest.py
(+710 files in other folders)
