[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "inheritbench"
version = "0.1.0"
description = "A model-succession developer tool for recovering and verifying operational capabilities."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "InheritBench contributors" }]
dependencies = [
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "PyYAML>=6,<7",
  "typer>=0.15,<1",
  "rich>=13.9,<15",
  "structlog>=24.4,<26",
  "psutil>=6,<8",
]

[project.optional-dependencies]
model = [
  "torch>=2.5,<3",
  "transformers>=4.48,<5",
  "accelerate>=1.2,<2",
  "huggingface-hub>=0.27,<1",
  "peft>=0.14,<1",
  "safetensors>=0.4,<1",
]
modal = ["modal>=1,<2"]
analyst = ["openai>=2,<3"]

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "types-PyYAML",
]

[project.scripts]
inheritbench = "inheritbench.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/inheritbench"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["inheritbench"]
mypy_path = "src"
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yaml", "transformers.*", "torch.*", "peft.*", "modal.*", "openai.*", "psutil"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "model_smoke: opt-in tests that download or load real model weights",
  "modal: opt-in tests that invoke Modal",
]
